@@ -84,20 +84,19 @@ untar(tarfile, files = NULL, list = FALSE, exdir = ".",
   compression.  It does not guard against restoring absolute file paths,
   as some \command{tar} implementations do.  It will create the parent
   directories for directories or files in the archive if necessary.  It
-  handles both the standard (USTAR/POSIX) and GNU ways of handling file
-  paths of more than 100 bytes.
+  handles the standard (USTAR/POSIX), GNU and \command{pax} ways of
+  handling file paths of more than 100 bytes.
 
-  You may see warnings from the internal implementation such as
-\preformatted{unsupported entry type 'x'}
+  You may see warnings from the internal implementation such
+  as \preformatted{    unsupported entry type 'x'}
   This often indicates an invalid archive: entry types \code{"A-Z"} are
-  allowed as extensions, but other types are reserved (this example is
-  from Mac OS 10.6.3).  The only thing you can do with such an archive
-  is to find a \code{tar} program that handles it, and look carefully at
-  the resulting files.  There may also be the warning
-\preformatted{skipping pax headers}
-  usually from an archive generated by \command{bsdtar}.  This is
-  indicates that additional information has been discarded, such as long
-  filepaths, ACLs, encodings \dots.
+  allowed as extensions, but other types are reserved.  The only thing
+  you can do with such an archive is to find a \code{tar} program that
+  handles it, and look carefully at the resulting files.  There may also
+  be the warning \preformatted{    using pax headers}
+  This is indicates that additional information may have been discarded,
+  such as ACLs, encodings \dots, and long path and link names are only
+  used as from \R 3.0.0.
 
   The standards only support ASCII filenames (indeed, only alphanumeric
   plus period, underscore and hyphen).  \code{untar} makes no attempt to map
